--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.7.0
 cfgv==3.4.0
 click==8.1.6
 distlib==0.3.7
+dj-rest-auth==2.1.5
 Django==4.2.4
 djangorestframework==3.14.0
 filelock==3.12.2
