--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,42 @@
 asgiref==3.7.2
 black==23.7.0
+certifi==2023.7.22
+cffi==1.15.1
 cfgv==3.4.0
+charset-normalizer==3.2.0
 click==8.1.6
+cryptography==41.0.3
+defusedxml==0.7.1
 distlib==0.3.7
 dj-rest-auth==2.1.5
 Django==4.2.4
+django-allauth==0.52.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.7
 filelock==3.12.2
 identify==2.5.26
+idna==3.4
 inflection==0.5.1
 isort==5.12.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
+oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
 pre-commit==3.3.3
+pycparser==2.21
+PyJWT==2.8.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3
 PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
 uritemplate==4.1.1
+urllib3==2.0.4
 virtualenv==20.24.3
