--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,23 +1,27 @@
-version: "3.9"
-
+version: "3"
 services:
-  django:
-    build: .
-    restart: always
-    ports:
-      - "8000:8000"
+  db:
+    image: postgres:13
     volumes:
-      - .:/app
-    depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:14.3-alpine3.16
-    ports:
-      - "5431:5432"
-    volumes:
-      - ./database:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
