--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SECRET_KEY="django-insecure-vlp^^uqv&yecwqf%2h%hxervr4w_)0op%4k=bknjkxu+u6@=p0"
 DEBUG="True"
-ALLOWED_HOSTS="127.0.0.1 django"
+ALLOWED_HOSTS="127.0.0.1 0.0.0.0"
+DB_NAME="postgres"
+DB_USER="postgres"
+DB_PASSWORD="postgres"
+DB_HOST="db"
+DB_PORT="5432"
