--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
 pre-commit==3.3.3
+psycopg2==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
 python-dotenv==1.0.0
