--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.6
 cryptography==41.0.3
 defusedxml==0.7.1
 distlib==0.3.7
+dj-database-url==2.1.0
 dj-rest-auth==2.1.5
 Django==4.2.4
 django-allauth==0.52.0
