--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ django-allauth==0.52.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.7
+exceptiongroup==1.1.3
 filelock==3.12.2
 identify==2.5.26
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 isort==5.12.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
@@ -26,10 +28,14 @@ oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
+pluggy==1.2.0
 pre-commit==3.3.3
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
+pytest==7.4.0
+pytest-django==4.5.2
+pytest-dotenv==0.5.2
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
