--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.7
 exceptiongroup==1.1.3
 filelock==3.12.2
+gunicorn==21.2.0
 identify==2.5.26
 idna==3.4
 inflection==0.5.1
