--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
-version: "3"
+version: "3.9"
+
 services:
   db:
-    image: postgres:13
-    ports:
-      - "54320:5432"
+    image: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - db-data:/var/lib/postgresql/data
+      - ./pg-scripts:/docker-entrypoint-initdb.d
+    env_file:
+      - .env
+    ports:
+      - "5433:5432"
 
   web:
     build:
@@ -26,4 +26,4 @@ services:
       - db
 
 volumes:
-  postgres_data:
+  db-data:
