--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-SECRET_KEY="django-insecure-vlp^^uqv&yecwqf%2h%hxervr4w_)0op%4k=bknjkxu+u6@=p0"
+SECRET_KEY="foo"
 DEBUG="True"
-ALLOWED_HOSTS="127.0.0.1 0.0.0.0"
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
-DATABASE=postgres
+ALLOWED_HOSTS="0.0.0.0"
+POSTGRES_DB="postgres"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="db"
+POSTGRES_PORT="5432"
+DATABASE="postgres"
