--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.15.1
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
+coverage==7.3.0
 cryptography==41.0.3
 defusedxml==0.7.1
 distlib==0.3.7
@@ -35,6 +36,7 @@ psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.8.0
 pytest==7.4.0
+pytest-cov==4.1.0
 pytest-django==4.5.2
 pytest-dotenv==0.5.2
 python-dotenv==1.0.0
