--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.7
 exceptiongroup==1.1.3
+factory-boy==3.3.0
+Faker==19.3.0
 filelock==3.12.2
 gunicorn==21.2.0
 identify==2.5.26
@@ -39,12 +41,14 @@ pytest==7.4.0
 pytest-cov==4.1.0
 pytest-django==4.5.2
 pytest-dotenv==0.5.2
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.7.1
