--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 env_files = .env
 DJANGO_SETTINGS_MODULE = config.settings
 addopts = -v -s --cov=apps/ --no-cov-on-fail
+log_cli = 1
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
